fix bonus layout on mobile

--- a/client/src/components/posts/post.scss
+++ b/client/src/components/posts/post.scss
@@ -86,7 +86,7 @@ a:link {
 .longDescription {
   font-family: Helvetica;
   font-size: 1.3rem;
-  margin: 4rem;
+  margin: 2rem;
 }
 
 .bonusLabel {
